--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,10 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "devaloka/mu-plugin-installer": "~0.2.0",
-    "composer-plugin-api": "~1.1.0",
+    "lplabs/wordpress-muplugin-installer": "^2.0",
     "php": ">=7.2"
   },
   "extra": {
-    "installer-loader": "users.php"
+    "wordpress-muplugin-entry": "users.php"
   }
 }
